# redis-clone

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  run  test.py  test.sh  test.txt  your_program.sh
.codecrafters/: compile.sh  run.sh
app/: arena.c  arena.h  common.c  common.h  hashmap.c  hashmap.h  rdb.c  rdb.h  resp.c  resp.h  server.c  server.h  str.c  str.h  types.h  vec.c  vec.h
test/: bin  dump.rdb  test.c  test.py
tools/: ping_client.go  replicas.go
tools/redis_consistency/: main.go
